examples/type_system/failing/78_hm_inline_call_no_runtime_fallback.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/78_hm_inline_call_no_runtime_fallback.flx
// error[E300]: Annotation Type Mismatch
//
// The value of `_x` does not match its type annotation.
//
//   examples/type_system/failing/78_hm_inline_call_no_runtime_fallback.flx:30:23
//    |
// 30 |     let _x: String = (\(n: Int) -> n)(1)
//    |                       ^^^^^^^^^^^^^^^^^^
//    |                       ------------------ this value has type `Int`
//
//    |             ------ but `_x` was annotated as `String`
//
// Note:
//   annotated type: String
//   value type: Int
//
// Help:
//   Try `to_string(...)` to convert a `Int` into a `String`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn main() -> Unit {
    // HM can infer this inline lambda call as Int.
    // Runtime-boundary compatibility typing cannot infer call returns for inline function expressions.
    let _x: String = (\(n: Int) -> n)(1)
}
